# learn-rust

./: .gitignore  Cargo.toml  dev-notes.md  justfile
src/: main.rs  main_rfid.rs  rfid.rs  state_machine.rs
