[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
embedded-hal-02 = { version = "0.2.7", package="embedded-hal"  }
linux-embedded-hal = "0.3.2"
mfrc522 = { version = "0.6.1", features =["std"] }
